Refactor OpenApiExamples to public and update API documentation annotations
- Changed visibility of OpenApiExamples class and its constants from `final` to `public`.
- Removed Swagger annotations from DTO classes to simplify the codebase.
- Added validation logic for board payloads in HintRequest and SolvePuzzleRequest.
- Updated PuzzleController to remove Swagger annotations and streamline API responses.
- Improved validation error handling in ApiErrorResponse and related classes.
- Refactored test cases to use standard List methods instead of deprecated methods.
- Fixed potential null pointer exceptions in HintService and other service classes.